# RAG-Conversational-Agent

./: .aider.chat.history.md  .aider.input.history  Dockerfile  pyproject.toml
.aider.tags.cache.v4/: cache.db
app/: config.py  main.py
app/core/: analysis_utils.py  llm_client.py  search_client.py
app/routes/: chat.py
app/schemas/: chat.py
